# HistopathologicalAnalysis

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  CMakeLists.txt.user.f3e6e94  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
core/: cellsegmentator.cpp  cellsegmentator.h  graph.cpp  graph.h  hestainfilter.cpp  hestainfilter.h  imagereader.cpp  imagereader.h  pleuradetector.cpp  pleuradetector.h  roiextractor.cpp  roiextractor.h
dataStructures/: quadnode.cpp  quadnode.h  quadtree.cpp  quadtree.h
python/: FitPleuraLabels.py  NN.py  Output.csv  vsiReader.py
util/: ImageOperations.h  adaptiveotsufilter.cpp  adaptiveotsufilter.h  cellbinarizationfilter.cpp  cellbinarizationfilter.h  colorconverterfilter.cpp  colorconverterfilter.h  customprint.h  extractchannelfilter.cpp  findpeaks.cpp  findpeaks.h  fractaldimensionfilter.cpp  fractaldimensionfilter.h  illuminant.h  imageframeworktypeconverter.h  inputOutput.h  labelmaptomultiplegrayimagesfilter.cpp  labelmaptomultiplegrayimagesfilter.h  labelmaptomultipleimagesfilter.cpp  labelmaptomultipleimagesfilter.h  labelmaptomultiplergbimagesfilter.cpp  labelmaptomultiplergbimagesfilter.h  logfilter.cpp  logfilter.h  math.h  minmaxrgbimagecalculator.cpp  minmaxrgbimagecalculator.h  overlayrgbimagefilter.cpp  overlayrgbimagefilter.h  persistence1d.hpp  regionofinterestfilter.cpp  regionofinterestfilter.h  replaceimagechannelfilter.cpp  replaceimagechannelfilter.h  rescalergbimagefilter.cpp  rescalergbimagefilter.h  rgbhistogramfilter.cpp  rgbhistogramfilter.h  superpixels.cpp  superpixels.h  (+3 more)
